--- a/template/index.html
+++ b/template/index.html
@@ -1,80 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OwnTube</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
+      integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="App">
-        <header>
+      <header>
         <div class="brand">
-            OwnTube
+          OwnTube
         </div>
-        <Nav>
-            <form>
-                <input type="text" placeholder="Type what you're looking for...">
-                <input type="submit" value="Search">
-            </form>
+        <nav>
+          <form>
+            <input type="text" placeholder="Type what you're looking for..." />
+            <input type="submit" value="Search" />
+          </form>
+          <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+            <li>Link 4</li>
+            <li>Link 5</li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="ContentItems">
+          <span class="Section-title">
+            <h2>
+              <span class="oi oi-star"></span>
+              Trending videos
+            </h2>
+          </span>
+          <div class="VideoList">
             <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
-                <li>Link 5</li>
+              <li class="item">
+                <img alt="image of video" />
+                <span class="video-title">Some random video</span>
+              </li>
+              <li class="item">
+                <img alt="image of video" />
+                <span class="video-title">Some random video</span>
+              </li>
+              <li class="item">
+                <img alt="image of video" />
+                <span class="video-title">Some random video</span>
+              </li>
+              <li class="item">
+                <img alt="image of video" />
+                <span class="video-title">Some random video</span>
+              </li>
+              <li class="item">
+                <img alt="image of video" />
+                <span class="video-title">Some random video</span>
+              </li>
             </ul>
-        </Nav>
-        </header>
-        <main>
-            <ul class="ContentItems">
-                <li class="item">
-                    <img alt="image of video">
-                    <span class="video-title">Some random video</span>
-                </li>
-                <li class="item">
-                    <img alt="image of video">
-                    <span class="video-title">Some random video</span>
-                </li>
-                <li class="item">
-                    <img alt="image of video">
-                    <span class="video-title">Some random video</span>
-                </li>
-                <li class="item">
-                    <img alt="image of video">
-                    <span class="video-title">Some random video</span>
-                </li>
-                <li class="item">
-                    <img alt="image of video">
-                    <span class="video-title">Some random video</span>
-                </li>
-            </ul>
-            <div class="Queue">
-                <div class="FilterOptions">
-                    Discard worse videos
-                </div>
-                <ul>
-                    <li>Some video 1</li>
-                    <li>Some video 2</li>
-                    <li>Some video 3</li>
-                    <li>Some video 4</li>
-                </ul>
-            </div>
-        </main>
-        <div class="MainControls">
-            <span class="title">Current playing video</span>
-            <div class="controls">
-                <span>Prev</span>
-                <span>Pause</span>
-                <span>Next</span>
-            </div>
-            <div class="Reactions">
-                <span>Like</span>
-                <span>Dislike</span>
-                <span>Comment</span>
-                <span>Share</span>
-            </div>
+          </div>
         </div>
+        <div class="Queue">
+          <span class="Section-title">
+            <h2>Your queue</h2>
+          </span>
+          <div class="FilterOptions">
+            Discard worse videos
+          </div>
+          <ul>
+            <li>Some video 1</li>
+            <li>Some video 2</li>
+            <li>Some video 3</li>
+            <li>Some video 4</li>
+          </ul>
+        </div>
+      </main>
+      <div class="Controls">
+        <span class="title">Current playing video</span>
+        <div class="controls-container">
+          <div class="MediaControls">
+            <span class="oi oi-media-skip-backward"></span>
+            <span class="oi oi-media-play"></span>
+            <span class="oi oi-media-skip-forward"></span>
+          </div>
+          <div class="ReactionControls">
+            <span class="oi oi-thumb-up"></span>
+            <span class="oi oi-thumb-down"></span>
+            <span class="oi oi-comment-square"></span>
+            <span class="oi oi-share"></span>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
