--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,9 @@
         <nav>
           <form>
             <input type="text" placeholder="Type what you're looking for..." />
-            <input type="submit" value="Search" />
+            <button type="submit">
+              <span class="oi oi-magnifying-glass"></span>
+            </button>
           </form>
           <ul>
             <li>Link 1</li>
@@ -73,9 +75,6 @@
           <span class="Section-title">
             <h2>Your queue</h2>
           </span>
-          <div class="FilterOptions">
-            Discard worse videos
-          </div>
           <ul>
             <li>Some video 1</li>
             <li>Some video 2</li>
@@ -85,7 +84,9 @@
         </div>
       </main>
       <div class="Controls">
-        <span class="title">Current playing video</span>
+        <span class="title"
+          ><span class="oi oi-musical-note"></span>Current playing video</span
+        >
         <div class="controls-container">
           <div class="MediaControls">
             <span class="oi oi-media-skip-backward"></span>
