--- a/template/style.css
+++ b/template/style.css
@@ -1,20 +1,26 @@
+button {
+  cursor: pointer;
+}
 body {
-  font: Verdana #111;
+  font-family: Verdana;
+  background-color: #aab;
 }
 .Section-title {
   display: flex;
   padding: 0em 1em;
 }
 .App {
-  background-color: #eee;
+  background-color: #aab;
 }
 .App > * {
   display: flex;
 }
 .App header {
+  background-color: #aab;
   width: 100%;
+  height: 3em;
   justify-content: space-between;
-  background-color: #aaa;
+  position: fixed;
 }
 .App header .brand {
   padding: 1em;
@@ -22,6 +28,7 @@ body {
 .App header nav {
   flex: 2;
   background-color: #ede;
+  border-radius: 0 0 0em 1em;
   display: flex;
   justify-content: space-between;
 }
@@ -33,8 +40,12 @@ body {
 .App header nav form input[type="text"] {
   width: 24em;
 }
-.App header nav form input[type="submit"] {
-  width: 2em;
+.App header nav form button {
+  color: #667;
+  border: 0;
+}
+.App header nav form button:hover {
+  color: #001;
 }
 .App header nav ul {
   display: flex;
@@ -44,12 +55,12 @@ body {
   padding: 0 1em;
 }
 .App main {
-  height: 100vh;
   background-color: #aab;
   display: flex;
+  padding-top: 3em;
+  padding-bottom: 5em;
 }
 .App main .ContentItems {
-  height: 100vh;
   flex: 4;
 }
 .App main .ContentItems h2 {
@@ -64,8 +75,9 @@ body {
   justify-content: flex-start;
 }
 .App main .ContentItems .VideoList ul .item {
+  cursor: pointer;
   padding: 1em 1em;
-  border-radius: 1em;
+  border-radius: 0.4em;
   background-color: #99a;
   display: flex;
   flex-direction: column;
@@ -82,11 +94,13 @@ body {
   display: flex;
   align-items: center;
 }
+.App main .ContentItems .VideoList ul .item:hover {
+  background-color: #778;
+}
 .App main .Queue {
   flex: 1;
 }
 .App main .Queue ul {
-  width: 100%;
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -103,9 +117,13 @@ body {
   align-items: center;
   height: 2em;
   background-color: #99a;
-  width: 100%;
+  cursor: pointer;
+}
+.App main .Queue ul li:hover {
+  background-color: #778;
 }
 .App .Controls {
+  padding: 1em;
   background-color: #113;
   color: white;
   position: fixed;
@@ -115,6 +133,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.App .Controls .title span.oi {
+  margin-right: 1em;
 }
 .App .Controls .controls-container {
   width: 100%;
@@ -127,4 +148,8 @@ body {
 }
 .App .Controls .controls-container > * span {
   padding: 1em;
+  cursor: pointer;
+}
+.App .Controls .controls-container > * span:hover {
+  color: #66a;
 }
