--- a/template/style.less
+++ b/template/style.less
@@ -158,7 +158,8 @@ body {
       display: flex;
       justify-content: space-evenly;
       > * {
-        background-color: #010111;
+        border: 1px solid #333;
+        background-color: #313155;
         border-radius: 0.2em;
         span {
           padding: 1em;
