--- a/template/style.css
+++ b/template/style.css
@@ -143,7 +143,8 @@ body {
   justify-content: space-evenly;
 }
 .App .Controls .controls-container > * {
-  background-color: #010111;
+  border: 1px solid #333;
+  background-color: #313155;
   border-radius: 0.2em;
 }
 .App .Controls .controls-container > * span {
