--- a/template/style.css
+++ b/template/style.css
@@ -38,7 +38,7 @@ body {
   align-items: center;
 }
 .App header nav form input[type="text"] {
-  width: 24em;
+  flex: 6;
 }
 .App header nav form button {
   color: #667;
@@ -69,10 +69,10 @@ body {
 .App main .ContentItems .VideoList ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16em, 1fr));
+  grid-auto-rows: minmax(12em, auto);
   column-gap: 1em;
   row-gap: 1em;
-  justify-content: flex-start;
 }
 .App main .ContentItems .VideoList ul .item {
   cursor: pointer;
@@ -81,12 +81,9 @@ body {
   background-color: #99a;
   display: flex;
   flex-direction: column;
-  width: 300px;
-  height: 200px;
 }
 .App main .ContentItems .VideoList ul .item img {
-  width: 300px;
-  height: 200px;
+  height: 100%;
   background-color: #444;
 }
 .App main .ContentItems .VideoList ul .item .video-title {
