--- a/template/style.less
+++ b/template/style.less
@@ -44,7 +44,7 @@ body {
         display: flex;
         align-items: center;
         input[type="text"] {
-          width: 24em;
+          flex: 6;
         }
         button {
           color: #667;
@@ -78,10 +78,13 @@ body {
         ul {
           list-style: none;
           display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+          grid-template-columns: repeat(auto-fit, minmax(16em, 1fr));
+          grid-auto-rows: minmax(
+            12em,
+            auto
+          ); // 12em height to remove when fill with images
           column-gap: 1em;
           row-gap: 1em;
-          justify-content: flex-start;
           .item {
             cursor: pointer;
             padding: 1em 1em;
@@ -89,11 +92,8 @@ body {
             background-color: @entry;
             display: flex;
             flex-direction: column;
-            width: 300px;
-            height: 200px;
             img {
-              width: 300px;
-              height: 200px;
+              height: 100%;
               background-color: #444;
             }
             .video-title {
